# llama3_awq_cuda_inference

./: CMakeLists.txt  Readme.md  common.h  cuda_inference.h  gpu_kernel.cu  inference.cu  main.cpp  main.sh  sampler.cu  sampler.h  tokenize.h  weight_packer.cpp
python_awq_quant/: Readme.md  awq_quant.py  convert_awq_to_bin.py  convert_awq_to_bin.sh  merge_safetensors.py
tokenizer-main/src/sw/tokenizer/: base64.h  tiktoken.h  toml.h
tokenizer-main/test/src/sw/tokenizer/: main.cpp
